tests/NormalTests/paczka1/small_fuzzy/88423904.err
Error in line 2: otNf A155 8,0
Error in line 7: ptenzruxZV S546 83,3
Error in line 6: otNf S544 65,9
Error in line 11: tfZMv S544 6,2
Error in line 9: ptenzruxZV S836 94,7
Error in line 10: otNf S836 91,4
